--- a/src/Shop/css/storeone.css
+++ b/src/Shop/css/storeone.css
@@ -69,7 +69,7 @@
 }
 
 .Store-header li.name-nav{
-    width: 40%;
+    width: 45%;
 }
 
 .Store-header li .link{
@@ -79,7 +79,7 @@
     text-decoration: none;
 }
 .Store-header .shopping-cart{
-    margin-top: 10px;
+    margin-top: 20px;
     float: right;
 }
 
@@ -251,6 +251,7 @@
     background: #2e2e2e;
     padding: 20px 40px;
 }
+
 .Store-footer .container-fluid{
     margin-top: 40px;
     margin-bottom: 40px;
@@ -296,6 +297,10 @@
     color: #ffffff;
     text-transform: lowercase;
     font-size: 14px;
+}
+.Store-footer .container-fluid a.link{
+    color: #f7f7f7;
+    text-decoration: none;
 }
 
 /*------------------------------------------*/
