--- a/src/Dashboard/css/dashStyles.css
+++ b/src/Dashboard/css/dashStyles.css
@@ -1,6 +1,8 @@
 
 /* ================== HELPERS JOE =================== */
-
+.mini-table{
+    display: none;
+}
 .store-settings{
     padding: 20px;
 }
@@ -236,7 +238,54 @@
 }
 
 @media (max-width: 812px) {
+    /*table sections*/
+    .max-table{
+        display: none;
+    }
+    .mini-table{
+        display: block;
+    }
 
+    .mini-table tbody td{
+        padding: 10px 0;
+        margin: 0;
+    }
+
+
+    .mini-table .order-details{
+        text-align: left;
+    }
+    .mini-table .order-details h5{
+        font-size: 15px;
+        font-weight: 600;
+    }
+    .mini-table .order-details h6{
+        font-size: 13px;
+        font-weight: 400;
+    }
+    .mini-table .order-details p {
+        font-size: 13px;
+        font-weight: 600;
+    }
+
+    .mini-table .order-payment-details{
+        text-align: right;
+    }
+    .mini-table .order-payment-details h5{
+        font-size: 15px;
+        font-weight: 700;
+    }
+    .mini-table .order-payment-details span{
+        font-size: 12px;
+        font-weight: 500;
+    }
+    .mini-table .order-payment-details p{
+        font-size: 13px;
+        font-weight: 400;
+    }
+
+
+    /*account sections*/
     .account-balance .card{
         padding: 5px 5px;
         height: 150px;
@@ -378,13 +427,10 @@
         width: 100%;
         font-size: 14px;
     }
-
-
     .recent-withdrawal h5{
         text-align: left;
         font-size: 16px;
     }
-
 
     .recent-withdrawal .card-body .table tbody td{
         font-size: 12px;
@@ -401,7 +447,70 @@
         margin-bottom: 5px;
         font-size: 10px;
     }
+
+    .category-table-img{
+        height: 40px;
+        width: 50px;
+    }
+    .category-table-img .img-fluid{
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        padding: 1px;
+    }
+    .category-table{
+        margin-top: 10%;
+    }
+    .category-table .info-details h6{
+        font-size: 14px;
+    }
+    .category-table .info-details p{
+        font-size: 13px;
+    }
+
 }
+
+
+@media (max-width: 540px) {
+    .mini-table .order-details{
+        text-decoration: none;
+        color: #2e2e2e;
+    }
+    .mini-table .order-details h5{
+        font-size: 14px;
+        font-weight: 600;
+    }
+    .mini-table .order-details h6{
+        font-size: 12px;
+        font-weight: 400;
+    }
+    .mini-table .order-details p {
+        font-size: 12px;
+        font-weight: 600;
+    }
+
+    .mini-table .order-payment-details{
+        text-align: right;
+        text-decoration: none;
+        color: #2e2e2e;
+    }
+    .mini-table .order-payment-details h5{
+        font-size: 14px;
+        font-weight: 700;
+    }
+    .mini-table .order-payment-details span{
+        font-size: 11px;
+        font-weight: 500;
+    }
+    .mini-table .order-payment-details p{
+        font-size: 12px;
+        font-weight: 400;
+    }
+
+}
+
+
 /* ================== HELPERS =================== */
 
 .table thead th {
