--- a/src/Shop/css/storeone.css
+++ b/src/Shop/css/storeone.css
@@ -283,7 +283,7 @@
 }
 
 .Store-footer .container-fluid ul li .Social-link{
-   text-decoration: none;
+    text-decoration: none;
     color: #ffffff;
 }
 
@@ -694,7 +694,7 @@
     padding: 0;
 }
 .product-details .image-box .thumb .thumb-nails li{
-   width: 100%;
+    width: 100%;
     height: 190px;
     padding: 3px;
     border: 0px solid #FE5F03;
@@ -900,7 +900,7 @@
 
     .Store-home-categories .store-cat-box{
         text-align: center;
-        margin: 10px 5px;
+        margin: 10px 5px 30px;
     }
     .Store-home-categories .store-cat-box .store-cat-img{
         width: 100%;
@@ -909,7 +909,7 @@
     }
     .Store-home-categories .store-cat-box .btn{
         position: relative;
-        top: 15px;
+        top: -15px;
         font-size: 12px;
         font-weight: 500;
         padding: 8px 20px;
