--- a/src/Dashboard/css/dashStyles.css
+++ b/src/Dashboard/css/dashStyles.css
@@ -412,7 +412,7 @@
 .account-balance .card{
     padding: 5px 10px;
     border-radius: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
 
     box-shadow: 0px 0px 8px 3px rgba(117,117,117,0.75);
     -webkit-box-shadow: 0px 0px 8px 3px rgba(117,117,117,0.75);
@@ -460,7 +460,7 @@
     font-size: 45px;
 }
 .section-two{
-    margin-top: 5%;
+    margin-top: 0%;
 }
 .withdrawal-page .card{
 
@@ -567,6 +567,9 @@
 .recent-withdrawal .card-body .table tbody td .info-details p{
     margin-bottom: 5px;
     font-size: 12px;
+}
+.recent-withdrawal .card-body .table tbody td .info-details p.text-bold{
+   font-weight: 500;
 }
 
 /* ================== HELPERS =================== */
@@ -763,6 +766,7 @@ body.offcanvas-active {
 }
 .content-body .account-form .form-group .form-control{
     width: 70%;
+    font-size: 14px;
     margin-left: 10px;
     border-radius: 1px;
     border: 0px solid #3E4095;
