--- a/src/Dashboard/css/dashStyles.css
+++ b/src/Dashboard/css/dashStyles.css
@@ -484,14 +484,17 @@
     padding-right: 10px;
 }
 .account-details .card-body p{
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 400;
+    text-transform: capitalize;
     margin-bottom: 10px;
 }
 .account-details .card-body .account-details-title p{
     font-weight: 600;
 }
-
+.account-details .card-body .link{
+    font-size: 13px;
+}
 .withdrawal-form{
     padding: 5px;
 }
