--- a/src/Dashboard/css/dashStyles.css
+++ b/src/Dashboard/css/dashStyles.css
@@ -524,7 +524,41 @@
 .withdrawal-form .form-group{
     margin: 20px 0px;
 }
-.withdrawal-form .form-group .btn{
+
+.withdrawal-form .form-group.calculated{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    display: flex;
+    flex: auto;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.withdrawal-form .form-group.calculated label{
+    margin-top: 0px;
+    padding-top: 0px;
+    font-size: 14px;
+    font-weight: 600;
+}
+.withdrawal-form .form-group.calculated p{
+    margin-top: 0px;
+    padding-top: 0px;
+}
+
+.withdrawal-form .form-group.calculated .processing{
+    font-size: 14px;
+    font-weight: 500;
+    color: #f30000;
+}
+
+.withdrawal-form .form-group.calculated .total{
+    font-size: 18px;
+    font-weight: 700;
+    color: #1fc063;
+}
+
+.withdrawal-form .form-group .btn.btn-primary{
     width: 100%;
     text-transform: capitalize;
     font-size: 16px;
@@ -538,6 +572,21 @@
     -moz-box-shadow: 0px 0px 3px 1px rgba(117,117,117,0.75);
 }
 
+.withdrawal-form .form-group .btn.btn-success{
+    margin-top: 5px;
+    width: 100%;
+    text-transform: capitalize;
+    font-size: 14px;
+    font-weight: 600;
+    color: #ffffff;
+    letter-spacing: 1px;
+    /*background: #3e4095;*/
+    /*border: 1px solid #3e4095;*/
+
+    box-shadow: 0px 0px 3px 1px rgba(117,117,117,0.75);
+    -webkit-box-shadow: 0px 0px 3px 1px rgba(117,117,117,0.75);
+    -moz-box-shadow: 0px 0px 3px 1px rgba(117,117,117,0.75);
+}
 
 
 .recent-withdrawal .card{
@@ -969,13 +1018,13 @@ body.offcanvas-active {
     }
 
     .store-settings h4{
-        font-size: 16px;
+        font-size: 15px;
         text-transform: uppercase;
         font-weight: 700;
         margin-bottom: 10px;
     }
     .store-settings h6{
-        font-size: 15px;
+        font-size: 13px;
         font-weight: 400;
         padding: 8px 5px;
     }
